--- a/DatingAppSPA/src/app/nav/nav.component.html
+++ b/DatingAppSPA/src/app/nav/nav.component.html
@@ -1,11 +1,12 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
   <a class="navbar-brand" href="#">Dating App</a>
   <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 TWENTY20
   <div class="collapse navbar-collapse" id="navbarsExampleDefault"> -->
-    <ul class="navbar-nav mr-auto">
+    <ul  *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -15,20 +16,18 @@ TWENTY20
       <li class="nav-item">
         <a class="nav-link">Message</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)="logout()">Logout</a>
-      </li>
+     
     </ul>
     
-    <div *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light" >
-       Welcome User
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+       Welcome {{authService.decodeToken.unique_name}}
       </a>
     
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" *dropdownMenu>
         <a class="dropdown-item" href="#">User Profile</a>
         <div class="dropdown-diveder"></div>
-        <a class="dropdown-item" href="#">Logout</a>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
     </div>
 
@@ -37,6 +36,7 @@ TWENTY20
       <input class="form-control mr-sm-2" type="password" name="Password" placeholder="Password" required [(ngModel)]="model.Password">  <!--  #Password="ngModel" -->
       <button [disabled]="!LoginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
+  </div>
   <!-- </div> -->
 </nav>
 <!-- <pre>
